# structcast-model

./: .gitignore  .releaserc.json  CHANGELOG.md  README.md  README_AGENT.md  SKILL.md  package.json  pyproject.toml  tox.ini
.github/: copilot-instructions.md
.github/workflows/: ci.yml
cfg/backwards/: ConvNeXtV2.yaml
cfg/datasets/: default_timm.yaml  mixup_w_prefetcher.timm.yaml
cfg/losses/: cls.yaml  soft_cls.yaml
cfg/metrics/: topk.yaml
cfg/models/: ConvNeXtV2.yaml
cfg/models/ConvNeXtV2/: backbone.yaml  cls.yaml
cfg/others/: compile_default.yaml  ema.yaml
docker/: dev.dockerfile
src/structcast_model/: __init__.py  base_trainer.py
src/structcast_model/builders/: __init__.py  auto_name.py  base_builder.py  core.py  jinja_filters.py  schema.py  torch_builder.py
src/structcast_model/commands/: __init__.py  cmd_torch.py  main.py  utils.py
src/structcast_model/torch/: __init__.py  optimizers.py  trainer.py  types.py
src/structcast_model/torch/layers/: __init__.py  accuracy.py  add.py  channel_shuffle.py  concatenate.py  criteria_tracker.py  fold.py  lazy_norm.py  multiply.py  permute.py  reduce.py  reinmax.py  scale_identity.py  split.py  types.py
src/structcast_model/utils/: __init__.py  base.py  lazy_import.py
tests/: __init__.py  conftest.py  test_base_trainer.py
tests/assets/cfg/: ConvNeXtV2Backward.yaml
tests/builders/: __init__.py  test_auto_name.py  test_base_builder.py  test_cfg_builders_advanced.py  test_core.py  test_jinja_filters.py  test_schema.py  test_torch_builder.py
tests/commands/: test_cmd_torch.py  test_main.py  test_utils.py
tests/fixtures/: circular.yaml
tests/torch/: __init__.py  test_optimizers.py  test_trainer.py
tests/torch/layers/: __init__.py  test_accuracy.py  test_add.py  test_channel_shuffle.py  test_concatenate.py  test_criteria_tracker.py  test_fold.py  test_lazy_norm.py  test_multiply.py  test_permute.py  test_reduce.py  test_reinmax.py  test_scale_identity.py  test_split.py
tests/utils/: __init__.py  test_base.py
