[project]
name = "structcast-model"
version = "0.0.0"
description = "Construct neural network models and training workflows by structcast package."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    # "structcast>=1.0.0",
    "structcast",
    "jinja2>=3.1.6",
    "pydantic>=2.12.5",
    "ruamel-yaml[jinja2]>=0.19.1",
    "typing-extensions>=4.15.0",
    "numpy>=2.4.2",
    "typer>=0.24.0",
]

[project.scripts]
scm = "structcast_model.commands.main:app"

[project.optional-dependencies]
jax-cpu = ["flax>=0.12.2", "jax[cpu]>=0.9.0.1"]
jax-cu12 = ["flax>=0.12.2", "jax[cuda12]>=0.9.0.1"]
jax-cu13 = ["flax>=0.12.2", "jax[cuda13]>=0.9.0.1"]
torch-cpu = ["timm", "torch>=2.0.0", "torchvision>=0.15.0"]
torch-cu118 = ["timm", "torch>=2.0.0", "torchvision>=0.15.0"]
torch-cu126 = ["timm", "torch>=2.6.0", "torchvision>=0.21.0"]
torch-cu128 = ["timm", "torch>=2.7.0", "torchvision>=0.22.0"]
torch-cu130 = ["timm", "torch>=2.9.0", "torchvision>=0.24.0"]
tf-cpu = ["tensorflow>=2.20.0"]
tf-cu12 = ["tensorflow[and-cuda]>=2.20.0"]
keras-jax-cpu = ["keras>=3.13.2", "structcast-model[jax-cpu]"]
keras-jax-cu12 = ["keras>=3.13.2", "structcast-model[jax-cu12]"]
keras-jax-cu13 = ["keras>=3.13.2", "structcast-model[jax-cu13]"]
keras-torch-cpu = ["keras>=3.13.2", "structcast-model[torch-cpu]"]
keras-torch-cu118 = ["keras>=3.13.2", "structcast-model[torch-cu118]"]
keras-torch-cu126 = ["keras>=3.13.2", "structcast-model[torch-cu126]"]
keras-torch-cu128 = ["keras>=3.13.2", "structcast-model[torch-cu128]"]
keras-torch-cu130 = ["keras>=3.13.2", "structcast-model[torch-cu130]"]
keras-tf-cpu = ["keras>=3.13.2", "structcast-model[tf-cpu]"]
keras-tf-cu12 = ["keras>=3.13.2", "structcast-model[tf-cu12]"]

[tool.uv]
conflicts = [
    [
        { extra = "jax-cpu" },
        { extra = "jax-cu12" },
        { extra = "jax-cu13" },
        { extra = "torch-cpu" },
        { extra = "torch-cu118" },
        { extra = "torch-cu126" },
        { extra = "torch-cu128" },
        { extra = "torch-cu130" },
        { extra = "tf-cpu" },
        { extra = "tf-cu12" },
        { extra = "keras-jax-cpu" },
        { extra = "keras-jax-cu12" },
        { extra = "keras-jax-cu13" },
        { extra = "keras-torch-cpu" },
        { extra = "keras-torch-cu118" },
        { extra = "keras-torch-cu126" },
        { extra = "keras-torch-cu128" },
        { extra = "keras-torch-cu130" },
        { extra = "keras-tf-cpu" },
        { extra = "keras-tf-cu12" },
    ],
]

[dependency-groups]
dev = ["mypy>=1.19.1", "pytest>=8.4.2", "pytest-asyncio>=1.3.0", "pytest-cov>=7.0.0", "ruff>=0.14.14"]
tox = ["tox>=4.0.0", "tox-uv>=1.0.0"]

[tool.uv.sources]
structcast = { git = "https://github.com/f6ra07nk14/structcast", branch = "dev" }
torch = [
    { index = "pytorch-cpu", extra = "torch-cpu" },
    { index = "pytorch-cu118", extra = "torch-cu118" },
    { index = "pytorch-cu126", extra = "torch-cu126" },
    { index = "pytorch-cu128", extra = "torch-cu128" },
    { index = "pytorch-cu130", extra = "torch-cu130" },
]
torchvision = [
    { index = "pytorch-cpu", extra = "torch-cpu" },
    { index = "pytorch-cu118", extra = "torch-cu118" },
    { index = "pytorch-cu126", extra = "torch-cu126" },
    { index = "pytorch-cu128", extra = "torch-cu128" },
    { index = "pytorch-cu130", extra = "torch-cu130" },
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[[tool.uv.index]]
name = "pytorch-cu118"
url = "https://download.pytorch.org/whl/cu118"
explicit = true

[[tool.uv.index]]
name = "pytorch-cu126"
url = "https://download.pytorch.org/whl/cu126"
explicit = true

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[[tool.uv.index]]
name = "pytorch-cu130"
url = "https://download.pytorch.org/whl/cu130"
explicit = true

[tool.pytest.ini_options]
log_cli = true
log_level = "INFO"
addopts = """\
--doctest-modules \
-s \
--cov src/ \
--cov-report term \
--cov-report xml:coverage.xml \
--cov-report html:coverage_html \
"""
testpaths = ["tests/", "src/structcast_model/"]

[tool.mypy]
python_version = "3.11"
disallow_untyped_defs = true
ignore_missing_imports = true
plugins = ["pydantic.mypy"]
no_site_packages = true

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
# warn_required_dynamic_aliases = true

[tool.ruff]
src = ["src/structcast_model", "tests"]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "PL",     # pylint
    "PT",     # pylint-pytest
    "D",      # pydocstyle
    "RUF022",
]
extend-select = [
    "B",  # flake8-bugbear
    "UP", # pyupgrade
    "S",  # flake8-bandit
    "C4", # flake8-comprehensions
]
ignore = ["PLW2901", "PLR2004"]
exclude = []

[tool.ruff.lint.per-file-ignores]
"src/structcast_model/**" = ["PT", "B028"]
"src/structcast_model/commands/**" = ["PT", "B028", "B008"]
"tests/**" = ["S"]

[tool.ruff.format]
quote-style = "double"
docstring-code-format = true

[tool.ruff.lint.isort]
combine-as-imports = true
known-first-party = ["structcast_model"]
force-sort-within-sections = true
# lines-between-types = 1

[tool.ruff.lint.pylint]
max-args = 20
max-returns = 10
max-branches = 15

[tool.ruff.lint.pydocstyle]
convention = "google"

[build-system]
requires = ["hatchling >= 1.26"]
build-backend = "hatchling.build"
